--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "agasbarlounge",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.8.3",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
